[tool.poetry]
name = "altair_demo"
version = "0.1.0"
description = ""
authors = ["joshua patterson <joshua.d.patterson1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
altair = "*"
jupyterlab = "^2.2.9"
vega-datasets = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
